@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,10 +23,16 @@
 
 package compiler.valhalla.inlinetypes;
 
+// TODO clean up imports in all test files and use a consistent location (before/after jtreg header?)
 import compiler.lib.ir_framework.*;
 import jdk.test.lib.Asserts;
 
 import java.lang.reflect.Method;
+
+import jdk.internal.misc.VM;
+import jdk.internal.vm.annotation.ImplicitlyConstructible;
+import jdk.internal.vm.annotation.LooselyConsistentValue;
+import jdk.internal.vm.annotation.NullRestricted;
 
 import static compiler.valhalla.inlinetypes.InlineTypeIRNode.*;
 import static compiler.valhalla.inlinetypes.InlineTypes.*;
@@ -34,12 +40,11 @@ import static compiler.valhalla.inlinetypes.InlineTypes.*;
 /*
  * @test
  * @key randomness
- * @summary Test the basic inline type implementation in C2
- *
+ * @summary Test the basic value class implementation in C2.
  * @requires (os.simpleArch == "x64" | os.simpleArch == "aarch64")
  * @library /test/lib /
- * @compile InlineTypes.java
- * @compile -XDenablePrimitiveClasses TestBasicFunctionality.java
+ * @compile -XDenablePrimitiveClasses --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED
+ *          --add-exports java.base/jdk.internal.misc=ALL-UNNAMED TestBasicFunctionality.java
  * @run main/othervm/timeout=300 -XX:+EnableValhalla -XX:+EnablePrimitiveClasses compiler.valhalla.inlinetypes.TestBasicFunctionality
  */
 
@@ -66,7 +71,7 @@ public class TestBasicFunctionality {
     }
 
 
-    // Receive inline type through call to interpreter
+    // Receive value class through call to interpreter
     @Test
     @IR(failOn = {ALLOC, STORE, TRAP})
     public long test1() {
@@ -81,7 +86,7 @@ public class TestBasicFunctionality {
     }
 
 
-    // Receive inline type from interpreter via parameter
+    // Receive value object from interpreter via parameter
     @Test
     @IR(failOn = {ALLOC, STORE, TRAP})
     public long test2(MyValue1 v) {
@@ -96,7 +101,7 @@ public class TestBasicFunctionality {
     }
 
 
-    // Return incoming inline type without accessing fields
+    // Return incoming value object without accessing fields
     @Test
     @IR(applyIf = {"InlineTypePassFieldsAsArgs", "true"},
         counts = {ALLOC, "= 1", STORE, "= 19"},
@@ -115,8 +120,8 @@ public class TestBasicFunctionality {
         Asserts.assertEQ(v1.y, v2.y);
     }
 
-    // Create an inline type in compiled code and only use fields.
-    // Allocation should go away because inline type does not escape.
+    // Create a value object in compiled code and only use fields.
+    // Allocation should go away because value object does not escape.
     @Test
     @IR(failOn = {ALLOC, LOAD, STORE, TRAP})
     public long test4() {
@@ -130,7 +135,7 @@ public class TestBasicFunctionality {
         Asserts.assertEQ(result, hash());
     }
 
-    // Create an inline type in compiled code and pass it to
+    // Create a value object in compiled code and pass it to
     // an inlined compiled method via a call.
     @Test
     @IR(failOn = {ALLOC, LOAD, STORE, TRAP})
@@ -150,7 +155,7 @@ public class TestBasicFunctionality {
         Asserts.assertEQ(result, hash());
     }
 
-    // Create an inline type in compiled code and pass it to
+    // Create a value object in compiled code and pass it to
     // the interpreter via a call.
     @Test
     @IR(applyIf = {"InlineTypePassFieldsAsArgs", "true"},
@@ -171,7 +176,7 @@ public class TestBasicFunctionality {
         Asserts.assertEQ(result, hash());
     }
 
-    // Create an inline type in compiled code and pass it to
+    // Create a value object in compiled code and pass it to
     // the interpreter by returning.
     @Test
     @IR(counts = {ALLOC, "= 2"},
@@ -186,7 +191,7 @@ public class TestBasicFunctionality {
         Asserts.assertEQ(v.hash(), hash());
     }
 
-    // Merge inline types created from two branches
+    // Merge value objects created from two branches
     @Test
     @IR(failOn = {ALLOC, STORE, TRAP})
     public long test8(boolean b) {
@@ -205,7 +210,7 @@ public class TestBasicFunctionality {
         Asserts.assertEQ(test8(false), hash(rI + 1, rL + 1));
     }
 
-    // Merge inline types created from two branches
+    // Merge value objects created from two branches
     @Test
     @IR(applyIf = {"InlineTypePassFieldsAsArgs", "true"},
         counts = {ALLOC, "= 1", LOAD, "= 19",
@@ -217,23 +222,23 @@ public class TestBasicFunctionality {
     public MyValue1 test9(boolean b, int localrI, long localrL) {
         MyValue1 v;
         if (b) {
-            // Inline type is not allocated
+            // Value object is not allocated
             // Do not use rI/rL directly here as null values may cause
             // some redundant null initializations to be optimized out
             // and matching to fail.
             v = MyValue1.createWithFieldsInline(localrI, localrL);
         } else {
-            // Inline type is allocated by the callee
+            // Value object is allocated by the callee
             v = MyValue1.createWithFieldsDontInline(rI + 1, rL + 1);
         }
-        // Need to allocate inline type if 'b' is true
+        // Need to allocate value object if 'b' is true
         long sum = v.hashInterpreted();
         if (b) {
             v = MyValue1.createWithFieldsDontInline(rI, sum);
         } else {
             v = MyValue1.createWithFieldsDontInline(rI, sum + 1);
         }
-        // Don't need to allocate inline type because both branches allocate
+        // Don't need to allocate value object because both branches allocate
         return v;
     }
 
@@ -247,7 +252,7 @@ public class TestBasicFunctionality {
         Asserts.assertEQ(v.y, hash(rI + 1, rL + 1) + 1);
     }
 
-    // Merge inline types created in a loop (not inlined)
+    // Merge value objects created in a loop (not inlined)
     @Test
     @IR(failOn = {ALLOC, STORE, TRAP})
     public long test10(int x, long y) {
@@ -264,7 +269,7 @@ public class TestBasicFunctionality {
         Asserts.assertEQ(result, hash(rI + 10, rL + 10));
     }
 
-    // Merge inline types created in a loop (inlined)
+    // Merge value objects created in a loop (inlined)
     @Test
     @IR(failOn = {ALLOC, LOAD, STORE, TRAP})
     public long test11(int x, long y) {
@@ -281,7 +286,7 @@ public class TestBasicFunctionality {
         Asserts.assertEQ(result, hash(rI + 10, rL + 10));
     }
 
-    // Test loop with uncommon trap referencing an inline type
+    // Test loop with uncommon trap referencing a value object
     @Test
     @IR(applyIf = {"FlatArrayElementMaxSize", "= -1"},
         counts = {SCOBJ, ">= 1", LOAD, "<= 12"}) // TODO 8227588 (loads should be removed)
@@ -313,7 +318,7 @@ public class TestBasicFunctionality {
         Asserts.assertEQ(result, info.isWarmUp() ? rL + (1000 * rI) : ((Math.abs(rI) % 10) + 1) * hash());
     }
 
-    // Test loop with uncommon trap referencing an inline type
+    // Test loop with uncommon trap referencing a value object
     @Test
     public long test13(boolean b) {
         MyValue1 v = MyValue1.createWithFieldsDontInline(rI, rL);
@@ -343,8 +348,8 @@ public class TestBasicFunctionality {
         Asserts.assertEQ(result, info.isWarmUp() ? rL + (1000 * rI) : ((Math.abs(rI) % 10) + 1) * hash());
     }
 
-    // Create an inline type in a non-inlined method and then call a
-    // non-inlined method on that inline type.
+    // Create a value object in a non-inlined method and then call a
+    // non-inlined method on that value object.
     @Test
     @IR(applyIf = {"InlineTypePassFieldsAsArgs", "true"},
         failOn = {ALLOC, STORE, TRAP},
@@ -362,8 +367,8 @@ public class TestBasicFunctionality {
         Asserts.assertEQ(result, hash());
     }
 
-    // Create an inline type in an inlined method and then call a
-    // non-inlined method on that inline type.
+    // Create a value object in an inlined method and then call a
+    // non-inlined method on that value object.
     @Test
     @IR(applyIf = {"InlineTypePassFieldsAsArgs", "true"},
         failOn = {LOAD, TRAP},
@@ -382,8 +387,8 @@ public class TestBasicFunctionality {
         Asserts.assertEQ(result, hash());
     }
 
-    // Create an inline type in a non-inlined method and then call an
-    // inlined method on that inline type.
+    // Create a value object in a non-inlined method and then call an
+    // inlined method on that value object.
     @Test
     @IR(failOn = {ALLOC, STORE, TRAP})
     public long test16() {
@@ -397,8 +402,8 @@ public class TestBasicFunctionality {
         Asserts.assertEQ(result, hash());
     }
 
-    // Create an inline type in an inlined method and then call an
-    // inlined method on that inline type.
+    // Create a value object in an inlined method and then call an
+    // inlined method on that value object.
     @Test
     @IR(failOn = {ALLOC, LOAD, STORE, TRAP})
     public long test17() {
@@ -412,8 +417,8 @@ public class TestBasicFunctionality {
         Asserts.assertEQ(result, hash());
     }
 
-    // Create an inline type in compiled code and pass it to the
-    // interpreter via a call. The inline type is live at the first call so
+    // Create a value object in compiled code and pass it to the
+    // interpreter via a call. The value object is live at the first call so
     // debug info should include a reference to all its fields.
     @Test
     @IR(applyIf = {"InlineTypePassFieldsAsArgs", "true"},
@@ -434,8 +439,8 @@ public class TestBasicFunctionality {
         Asserts.assertEQ(result, hash());
     }
 
-    // Create an inline type in compiled code and pass it to the
-    // interpreter via a call. The inline type is passed twice but
+    // Create a value object in compiled code and pass it to the
+    // interpreter via a call. The value object is passed twice but
     // should only be allocated once.
     @Test
     @IR(applyIf = {"InlineTypePassFieldsAsArgs", "true"},
@@ -460,9 +465,9 @@ public class TestBasicFunctionality {
         Asserts.assertEQ(result, hash());
     }
 
-    // Create an inline type (array) in compiled code and pass it to the
-    // interpreter via a call. The inline type is live at the uncommon
-    // trap: verify that deoptimization causes the inline type to be
+    // Create a value type (array) in compiled code and pass it to the
+    // interpreter via a call. The value object is live at the uncommon
+    // trap: verify that deoptimization causes the value object to be
     // correctly allocated.
     @Test
     @IR(applyIf = {"InlineTypePassFieldsAsArgs", "true"},
@@ -490,19 +495,19 @@ public class TestBasicFunctionality {
         Asserts.assertEQ(result, hash() + va[0].hash() + va[1].hash() + va[2].hash());
     }
 
-    // Inline type fields in regular object
+    // Value class fields in regular object
     MyValue1 val1;
     MyValue2 val2;
     final MyValue1 val3 = MyValue1.createWithFieldsInline(rI, rL);
     static MyValue1 val4;
     static final MyValue1 val5 = MyValue1.createWithFieldsInline(rI, rL);
 
-    // Test inline type fields in objects
+    // Test value class fields in objects
     @Test
     @IR(counts = {ALLOC, "= 2"},
         failOn = TRAP)
     public long test21(int x, long y) {
-        // Compute hash of inline type fields
+        // Compute hash of value class fields
         long result = val1.hash() + val2.hash() + val3.hash() + val4.hash() + val5.hash();
         // Update fields
         val1 = MyValue1.createWithFieldsInline(x, y);
@@ -522,13 +527,13 @@ public class TestBasicFunctionality {
         long hash = val1.hash() + val2.hash() + val3.hash() + val4.hash() + val5.hash();
         long result = test21(rI + 1, rL + 1);
         Asserts.assertEQ(result, hash);
-        // Check if inline type fields were updated
+        // Check if value class fields were updated
         Asserts.assertEQ(val1.hash(), hash(rI + 1, rL + 1));
         Asserts.assertEQ(val2.hash(), MyValue2.createWithFieldsInline(rI + 1, rD).hash());
         Asserts.assertEQ(val4.hash(), hash(rI + 1, rL + 1));
     }
 
-    // Test folding of constant inline type fields
+    // Test folding of constant value class fields
     @Test
     @IR(failOn = {ALLOC, LOAD, STORE, LOOP, TRAP})
     public long test22() {
@@ -604,7 +609,7 @@ public class TestBasicFunctionality {
         public MyValue1 v;
     }
 
-    // Test allocation elimination of unused object with initialized inline type field
+    // Test allocation elimination of unused object with initialized value class field
     @Test
     @IR(failOn = {ALLOC, LOAD, STORE, LOOP})
     public void test27(boolean deopt, Method m) {
@@ -625,17 +630,17 @@ public class TestBasicFunctionality {
     static MyValue3 staticVal3;
     static MyValue3 staticVal3_copy;
 
-    // Check elimination of redundant inline type allocations
+    // Check elimination of redundant value class allocations
     @Test
     @IR(counts = {ALLOC, "= 1"})
     public MyValue3 test28(MyValue3[] va) {
-        // Create inline type and force allocation
+        // Create value object and force allocation
         MyValue3 vt = MyValue3.create();
         va[0] = vt;
         staticVal3 = vt;
         vt.verify(staticVal3);
 
-        // Inline type is now allocated, make a copy and force allocation.
+        // Value object is now allocated, make a copy and force allocation.
         // Because copy is equal to vt, C2 should remove this redundant allocation.
         MyValue3 copy = MyValue3.setC(vt, vt.c);
         va[0] = copy;
@@ -677,7 +682,7 @@ public class TestBasicFunctionality {
         }
     }
 
-    // Verify that C2 recognizes inline type loads and re-uses the oop to avoid allocations
+    // Verify that C2 recognizes value class loads and re-uses the oop to avoid allocations
     @Test
     @IR(applyIf = {"FlatArrayElementMaxSize", "= -1"},
         failOn = {ALLOC, ALLOCA, STORE})
@@ -699,13 +704,13 @@ public class TestBasicFunctionality {
         staticVal3.verify(va[0]);
     }
 
-    // Verify that C2 recognizes inline type loads and re-uses the oop to avoid allocations
+    // Verify that C2 recognizes value class loads and re-uses the oop to avoid allocations
     @Test
     @IR(applyIf = {"InlineTypePassFieldsAsArgs", "false"},
         failOn = {ALLOC, ALLOCA, STORE})
     public MyValue3 test31(MyValue3[] va) {
         // C2 can re-use the oop returned by createDontInline()
-        // because the corresponding inline type is equal to 'copy'.
+        // because the corresponding value object is equal to 'copy'.
         MyValue3 copy = MyValue3.copy(MyValue3.createDontInline());
         va[0] = copy;
         staticVal3 = copy;
@@ -721,7 +726,7 @@ public class TestBasicFunctionality {
         staticVal3.verify(va[0]);
     }
 
-    // Verify that C2 recognizes inline type loads and re-uses the oop to avoid allocations
+    // Verify that C2 recognizes value class loads and re-uses the oop to avoid allocations
     @Test
     @IR(applyIf = {"InlineTypePassFieldsAsArgs", "false"},
         failOn = {ALLOC, ALLOCA, STORE})
@@ -744,7 +749,7 @@ public class TestBasicFunctionality {
         result.verify(vt);
     }
 
-    // Test correct identification of inline type copies
+    // Test correct identification of value object copies
     @Test
     public MyValue3 test33(MyValue3[] va) {
         MyValue3 vt = MyValue3.copy(staticVal3);
@@ -766,7 +771,7 @@ public class TestBasicFunctionality {
         Asserts.assertEQ(vt.i, (int)staticVal3.c);
     }
 
-    // Verify that the default inline type is never allocated.
+    // Verify that the default value class is never allocated.
     // C2 code should load and use the default oop from the java mirror.
     @Test
     @IR(applyIf = {"FlatArrayElementMaxSize", "= -1"},
@@ -778,7 +783,7 @@ public class TestBasicFunctionality {
         staticVal3 = vt;
         vt.verify(vt);
 
-        // Load default value from uninitialized inline type array
+        // Load default value from uninitialized value class array
         MyValue3[] dva = new MyValue3[1];
         staticVal3_copy = dva[0];
         va[1] = dva[0];
@@ -800,7 +805,7 @@ public class TestBasicFunctionality {
         va[1].verify(vt);
     }
 
-    // Same as above but manually initialize inline type fields to default.
+    // Same as above but manually initialize value class fields to default.
     @Test
     @IR(applyIf = {"FlatArrayElementMaxSize", "= -1"},
         failOn = {ALLOC, ALLOCA, LOAD, STORE, LOOP, TRAP})
@@ -835,7 +840,7 @@ public class TestBasicFunctionality {
         va[0].verify(vt);
     }
 
-    // Merge inline types created from two branches
+    // Merge value objects created from two branches
 
     private Object test36_helper(Object v) {
         return v;
@@ -861,15 +866,20 @@ public class TestBasicFunctionality {
     }
 
     // Test correct loading of flattened fields
-    primitive class Test37Value2 {
-        final int x = 0;
-        final int y = 0;
+    @ImplicitlyConstructible
+    @LooselyConsistentValue
+    value class Test37Value2 {
+        int x = 0;
+        int y = 0;
     }
 
-    primitive class Test37Value1 {
-        final double d = 0;
-        final float f = 0;
-        final Test37Value2 v = new Test37Value2();
+    @ImplicitlyConstructible
+    @LooselyConsistentValue
+    value class Test37Value1 {
+        double d = 0;
+        float f = 0;
+        @NullRestricted
+        Test37Value2 v = new Test37Value2();
     }
 
     @Test
@@ -883,12 +893,15 @@ public class TestBasicFunctionality {
         Asserts.assertEQ(test37(vt), vt);
     }
 
-    // Test elimination of inline type allocations without a unique CheckCastPP
-    primitive class Test38Value {
+    // Test elimination of value class allocations without a unique CheckCastPP
+    @ImplicitlyConstructible
+    @LooselyConsistentValue
+    value class Test38Value {
         public int i;
         public Test38Value(int i) { this.i = i; }
     }
 
+    @NullRestricted
     static Test38Value test38Field;
 
     @Test
@@ -905,13 +918,15 @@ public class TestBasicFunctionality {
 
     @Run(test = "test38")
     public void test38_verifier() {
-        test38Field = Test38Value.default;
+        test38Field = new Test38Value(0);
         test38();
         Asserts.assertEQ(test38Field, new Test38Value(99));
     }
 
-    // Tests split if with inline type Phi users
-    static primitive class Test39Value {
+    // Tests split if with value class Phi users
+    @ImplicitlyConstructible
+    @LooselyConsistentValue
+    static value class Test39Value {
         public int iFld1;
         public int iFld2;
 
@@ -920,7 +935,8 @@ public class TestBasicFunctionality {
 
     static int test39A1[][] = new int[400][400];
     static double test39A2[] = new double[400];
-    static Test39Value test39Val = Test39Value.default;
+    @NullRestricted
+    static Test39Value test39Val = new Test39Value(0, 0);
 
     @DontInline
     public int[] getArray() {
@@ -964,7 +980,7 @@ public class TestBasicFunctionality {
         Asserts.assertEQ(result, 1552);
     }
 
-    // Test scalar replacement of inline type array containing inline type with oop fields
+    // Test scalar replacement of value class array containing value class with oop fields
     @Test
     public long test40(boolean b) {
         MyValue1[] va = {MyValue1.createWithFieldsInline(rI, rL)};
