@@ -24,11 +24,14 @@
 /**
  * @test
  * @bug 8313667
- * @summary Test that GenZ uses correct array copy stub for flat primitive clone arrays when expanding ArrayCopyNode.
+ * @summary Test that GenZ uses correct array copy stub for flat value class arrays when expanding ArrayCopyNode.
  * @requires vm.gc.ZSinglegen
  * @library /test/lib
- * @compile -XDenablePrimitiveClasses TestWrongFlatArrayCopyStubWithZGC.java
- * @run main/othervm -XX:+EnableValhalla -XX:+EnablePrimitiveClasses -Xbatch -XX:+UseZGC -XX:-ZGenerational
+ * @compile --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED
+ *          --add-exports java.base/jdk.internal.misc=ALL-UNNAMED TestWrongFlatArrayCopyStubWithZGC.java
+ * @run main/othervm -XX:+EnableValhalla -Xbatch -XX:+UseZGC -XX:-ZGenerational
+ *                   --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED
+ *                   --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
  *                   -XX:CompileCommand=exclude,compiler.valhalla.inlinetypes.TestWrongFlatArrayCopyStubWithZGC::check
  *                   -XX:CompileCommand=dontinline,compiler.valhalla.inlinetypes.TestWrongFlatArrayCopyStubWithZGC::test*
  *                   compiler.valhalla.inlinetypes.TestWrongFlatArrayCopyStubWithZGC
@@ -39,10 +42,15 @@ package compiler.valhalla.inlinetypes;
 import jdk.test.lib.Asserts;
 import jdk.test.lib.Utils;
 
+import jdk.internal.misc.VM;
+import jdk.internal.vm.annotation.ImplicitlyConstructible;
+import jdk.internal.vm.annotation.LooselyConsistentValue;
+import jdk.internal.vm.annotation.NullRestricted;
+
 public class TestWrongFlatArrayCopyStubWithZGC {
 
     public static void main(String[] args) {
-        ValueWithLong[] arrWithLong = new ValueWithLong[3];
+        ValueWithLong[] arrWithLong = (ValueWithLong[])VM.newNullRestrictedArray(ValueWithLong.class, 3);
         arrWithLong[0] = new ValueWithLong(0x408BE000000fffffL);
         arrWithLong[1] = new ValueWithLong(0x408BE0000000000L);
         long randomValue = Utils.getRandomInstance().nextLong();
@@ -55,7 +63,7 @@ public class TestWrongFlatArrayCopyStubWithZGC {
             check(result[2].l, randomValue);
         }
 
-        ValueWithOop[] arrWithOop = new ValueWithOop[2];
+        ValueWithOop[] arrWithOop = (ValueWithOop[])VM.newNullRestrictedArray(ValueWithOop.class, 2);
         arrWithOop[0] = new ValueWithOop();
         arrWithOop[1] = new ValueWithOop();
 
@@ -77,17 +85,20 @@ public class TestWrongFlatArrayCopyStubWithZGC {
     }
 }
 
-
-final primitive class ValueWithLong {
-    final long l;
+@ImplicitlyConstructible
+@LooselyConsistentValue
+value class ValueWithLong {
+    long l;
 
     public ValueWithLong(long l) {
         this.l = l;
     }
 }
 
-final primitive class ValueWithOop {
-    final Object v;
+@ImplicitlyConstructible
+@LooselyConsistentValue
+value class ValueWithOop {
+    Object v;
 
     public ValueWithOop() {
         this.v = new Object();
